--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,6 +13,7 @@ const { title } = Astro.props;
         <meta name="viewport" content="width=device-width" />
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <meta name="generator" content={Astro.generator} />
+        <meta name="description" content="Planner for the Saturday nights." />
         <title>{title}</title>
     </head>
     <body>
@@ -20,8 +21,8 @@ const { title } = Astro.props;
     </body>
 </html>
 <style is:global>
-    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&display=swap');
-    @import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+    @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&display=swap");
+    @import url("https://fonts.googleapis.com/css2?family=Staatliches&display=swap");
     :root {
         --accent: 112 113 222;
         --accent-gradient: linear-gradient(
