--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,20 @@ import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
 import Vote from "../components/Vote.svelte";
 import Login from "../components/Login.svelte";
+
+import supabase from "../config/supabase";
+
+interface MovieData {
+    movies: {
+        id: number;
+        name: string;
+        img_url: string;
+    };
+}
+
+const { data }: { data: MovieData[] | null } = await supabase
+    .from("active_movies")
+    .select("movies(*)");
 ---
 
 <Layout title="Saturday Night at 9">
@@ -29,21 +43,21 @@ import Login from "../components/Login.svelte";
             </ul>
         </div>
 
-        <h2>Vote for next Saturday</h2>
-        <div class="vote-container">
-            <Vote
-                title="Argo"
-                img_url="https://upload.wikimedia.org/wikipedia/en/e/e1/Argo2012Poster.jpg"
-            />
-            <Vote
-                title="The Shining"
-                img_url="https://upload.wikimedia.org/wikipedia/en/1/1d/The_Shining_%281980%29_U.K._release_poster_-_The_tide_of_terror_that_swept_America_IS_HERE.jpg"
-            />
-            <Vote
-                title="Goodfellas"
-                img_url="https://upload.wikimedia.org/wikipedia/en/7/7b/Goodfellas.jpg"
-            />
-        </div>
+        {
+            data?.length && (
+                <div class="vote-container">
+                    <h2>Vote for next Saturday</h2>
+                    <div class="vote-card-container">
+                        {data.map(({ movies: m }) => (
+                            <Vote
+                                title={m.name}
+                                img_url={m.img_url}
+                            />
+                        ))}
+                    </div>
+                </div>
+            )
+        }
     </main>
 </Layout>
 
@@ -72,7 +86,7 @@ import Login from "../components/Login.svelte";
         text-align: center;
     }
     .content {
-        margin: 2.5em 0 1.5em 0;
+        margin-top: 2.5em;
     }
     .text-gradient {
         background-image: var(--accent-gradient);
@@ -88,6 +102,9 @@ import Login from "../components/Login.svelte";
         padding: 0;
     }
     .vote-container {
+        margin-top: 1.5rem;
+    }
+    .vote-card-container {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(12ch, 1fr));
         gap: 1em;
