--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import type { MovieData } from "../components/Vote.svelte";
 import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
 import Vote from "../components/Vote.svelte";
@@ -6,15 +7,7 @@ import Login from "../components/Login.svelte";
 
 import supabase from "../config/supabase";
 
-interface MovieData {
-    movies: {
-        id: number;
-        name: string;
-        img_url: string;
-    };
-}
-
-const { data }: { data: MovieData[] | null } = await supabase
+const { data: moviesData }: { data: MovieData[] | null } = await supabase
     .from("active_movies")
     .select("movies(*)");
 ---
@@ -45,19 +38,13 @@ const { data }: { data: MovieData[] | null } = await supabase
 
         <div class="vote-container">
             {
-                data?.length ? (
+                moviesData?.length ? (
                     <>
                         <h2>Vote for next Saturday</h2>
-                        <div class="vote-card-container">
-                            {data.map(({ movies: m }) => (
-                                <Vote
-                                    id={m.id}
-                                    title={m.name}
-                                    img_url={m.img_url}
-                                    client:load
-                                />
-                            ))}
-                        </div>
+                        <Vote
+                            moviesData={moviesData}
+                            client:load
+                        />
                     </>
                 ) : (
                     <h2>Wait for voting to start</h2>
@@ -109,10 +96,5 @@ const { data }: { data: MovieData[] | null } = await supabase
     }
     .vote-container {
         margin-top: 1.5rem;
-    }
-    .vote-card-container {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(12ch, 1fr));
-        gap: 1em;
     }
 </style>
