Change Vote component to CSR

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,8 @@
 ---
-import type { MovieData } from "@components/Vote.svelte";
 import Layout from "@layouts/Layout.astro";
 import Card from "@components/Card.astro";
 import Vote from "@components/Vote.svelte";
 import Login from "@components/Login.svelte";
-
-import supabase from "@config/supabase";
-
-const { data: moviesData }: { data: MovieData[] | null } = await supabase
-    .from("active_movies")
-    .select("movies(*)");
 ---
 
 <Layout title="Saturday Night at 9">
@@ -36,21 +29,7 @@ const { data: moviesData }: { data: MovieData[] | null } = await supabase
             </ul>
         </div>
 
-        <div class="vote-container">
-            {
-                moviesData?.length ? (
-                    <>
-                        <h2>Vote for next Saturday</h2>
-                        <Vote
-                            moviesData={moviesData}
-                            client:only
-                        />
-                    </>
-                ) : (
-                    <h2>Wait for voting to start</h2>
-                )
-            }
-        </div>
+        <div class="vote-container"><Vote client:only /></div>
     </main>
 </Layout>
 
@@ -66,9 +45,6 @@ const { data: moviesData }: { data: MovieData[] | null } = await supabase
         font-size: 2.5rem;
         font-weight: 800;
         margin: 0;
-    }
-    h2 {
-        text-align: center;
     }
     .title {
         display: flex;
