Load fonts using preconnect link

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,6 +14,12 @@ const { title } = Astro.props;
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <meta name="generator" content={Astro.generator} />
         <meta name="description" content="Planner for the Saturday nights." />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&family=Staatliches&display=swap"
+            rel="stylesheet"
+        />
         <title>{title}</title>
     </head>
     <body>
@@ -21,8 +27,6 @@ const { title } = Astro.props;
     </body>
 </html>
 <style is:global>
-    @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&display=swap");
-    @import url("https://fonts.googleapis.com/css2?family=Staatliches&display=swap");
     :root {
         --accent: 112 113 222;
         --accent-gradient: linear-gradient(
