--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,9 +17,18 @@ const { title } = Astro.props;
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
+            rel="preload"
             href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&family=Staatliches&display=swap"
-            rel="stylesheet"
+            as="style"
+            onload="this.onload=null;this.rel='stylesheet'"
         />
+        <noscript>
+            <link
+                href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&family=Staatliches&display=swap"
+                rel="stylesheet"
+                type="text/css"
+            />
+        </noscript>
         <title>{title}</title>
     </head>
     <body>
