--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,10 @@
 ---
 export interface Props {
     title: string;
+    prefetch_urls: string[];
 }
 
-const { title } = Astro.props;
+const { title, prefetch_urls } = Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -22,6 +23,7 @@ const { title } = Astro.props;
             as="style"
             onload="this.onload=null;this.rel='stylesheet'"
         />
+        {prefetch_urls.map((url) => <link rel="preload" as="image" href={url} />)}
         <noscript>
             <link
                 href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&family=Staatliches&display=swap"
