--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -3,13 +3,14 @@ export interface Props {
     title: string;
     body: string;
     href: string;
+    blank: boolean;
 }
 
-const { href, title, body } = Astro.props;
+const { href, title, body, blank } = Astro.props;
 ---
 
 <li class="link-card">
-    <a href={href}>
+    <a href={href} target={blank ? "_blank" : "_self"}>
         <h2>
             {title}
             <span>&rarr;</span>
